--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "build:autoprefixer": "postcss css/*.css --use autoprefixer -d css",
     "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
     "build-dev:sass": "sass --style=expanded --source-map sass:css",
-	"watch": "npm-run-all build build-dev -p watch:*",
+    "watch": "npm-run-all build build-dev -p watch:*",
     "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\" \"js/*.js\"",
-	"watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
+    "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "autoprefixer": "^10.4.20",
-    "browser-sync": "^3.0.3",
+    "browser-sync": "^1.3.7",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "html-validate": "^9.2.2",
     "mkdirp": "^3.0.1",
     "npm-run-all": "^4.1.5",
